syntax = "proto3";

package collectionx;

import "google/protobuf/timestamp.proto";
// import "google/protobuf/any.proto";

option go_package = "protobuf/privy/v1/collection_core_service";

message ErrorProto {
    string general = 1;
    repeated ValidationErrorProto validation = 2;
}

message ValidationErrorProto {
    string key = 1;
    string value = 2;
}

message StandardAPIProto {
    string status = 1;
    string entity = 2;
    string state = 3;
    string message = 4;
    optional MetaProto meta = 5;
    optional ErrorProto error = 6;
}

message DateRangeProto {
    string field = 1;
    google.protobuf.Timestamp start = 2;
    google.protobuf.Timestamp end = 3;
}

message FilterProto {
    string by = 1;
    string op = 2;
    oneof val {
        bool val_bool = 3;
        string val_string = 4;
        int64 val_int = 5;
    };
} 

message SortProto {
    string order_by = 1;
    OrderTypeProto order_type = 2;
}


message FilteringProto {
    repeated SortProto sort = 1;
    repeated FilterProto filter = 2;
    optional DateRangeProto date_range = 3;
}

message PaginationProto {
    int32 page = 1;
}

message MetaProto {
    int32 page = 1;
    int32 per_page = 2;
    int32 total = 3;
}

message MetadataProto {
    PaginationProto pagination = 1;
    FilteringProto filtering = 2;
}

message ParameterRequestProto {
    int32 per_page = 1;
    int32 page = 2;
    string order_by = 3;
    OrderTypeProto order_type = 4;
    string search = 5;
    string keyword = 6;
    string search_by = 7;
    optional DateRangeProto date_range = 8;
}

enum OrderTypeProto {
    ORDER_TYPE_NONE = 0;
    ORDER_TYPE_ASC = 1;
    ORDER_TYPE_DESC = 2;
}

message TimestampProto  {
    google.protobuf.Timestamp created_time = 1;
    google.protobuf.Timestamp read_time = 2;
    google.protobuf.Timestamp update_time = 3;
}


message DocumentChange {
    DocumentChangeKind kind = 1;
    bytes data = 2;
    TimestampProto timestamp = 3;
}


enum DocumentChangeKind {
    DOCUMENT_KIND_ADDED = 0;
    DOCUMENT_KIND_REMOVED = 1;
    DOCUMENT_KIND_MODIFIED = 2;
    DOCUMENT_KIND_SNAPSHOTS = 3;
}